--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "openai>=1.0.0",
     "python-dotenv>=1.0.0",
     "paramiko>=3.0.0",
+    "argcomplete>=3.0.0",
 ]
 
 [project.optional-dependencies]
