--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "python-dotenv>=1.0.0",
     "paramiko>=3.0.0",
     "argcomplete>=3.0.0",
+    "requests>=2.28.0",
 ]
 
 [project.optional-dependencies]
