add function delecaration parsing and index
  - Extracts function definitions and declarations with return types, parameters
  - Captures doc comments (both /* */ and /** */ style)
  - Extracts struct and enum definitions with enum values
  - Stores everything in SQLite with normalized return types for efficient lookup
  - Handles pointer return types correctly (struct json_object *, char **, etc.)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,10 @@ dependencies = [
 
 [project.optional-dependencies]
 dev = ["pytest>=7.0.0"]
+context = [
+    "tree-sitter>=0.21.0",
+    "tree-sitter-c>=0.21.0",
+]
 
 [project.scripts]
 tisaidga = "tis_driver_agent.cli:main"
