--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 .env
 
 # Project data
-.tisaidga/
+.tischiron/
 
 # Python
 __pycache__/
@@ -37,8 +37,12 @@ reference_scripts/
 logs
 benchmark_results/
 site/
+drivers
 
 # GUI
 gui/node_modules/
 gui/dist/
 gui/.vite/
+.tisaidga/
+IMPROVEMENT_PLAN.md
+benchmark_parallel.py
