--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools>=61.0"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "tisaidga"
+name = "tischiron"
 version = "0.1.0"
 description = "AI-powered driver generation for TrustInSoft Analyzer"
 requires-python = ">=3.10"
@@ -22,7 +22,7 @@ dependencies = [
 dev = ["pytest>=7.0.0"]
 
 [project.scripts]
-tisaidga = "tis_driver_agent.cli:main"
+tischiron = "tis_driver_agent.cli:main"
 
 [tool.setuptools.packages.find]
 include = ["tis_driver_agent*"]
