--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ requires-python = ">=3.10"
 dependencies = [
     "langgraph>=0.0.30",
     "openai>=1.0.0",
+    "anthropic>=0.40.0",
     "python-dotenv>=1.0.0",
     "paramiko>=3.0.0",
     "argcomplete>=3.0.0",
